add navbar and basic styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,26 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+
+    <div class="navbar-header">
+
+      <div class="nav navbar-nav navbar-right">
+        <a class="navbar-brand" href="/">ASK?</a>
+
+        {{#bs-dropdown}}
+        {{#bs-dropdown-button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"}}
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          {{/bs-dropdown-button}}
+          {{#bs-dropdown-menu}}
+          {{/bs-dropdown-menu}}
+          {{/bs-dropdown}}
+          </div>
+
+    </div>
+  </div><!-- /.container-fluid -->
+</nav>
 
 {{outlet}}
