add route for individual questions

--- a/app/components/new-question/template.hbs
+++ b/app/components/new-question/template.hbs
@@ -2,8 +2,9 @@
 
 <form id="newQuestion">
   <p>
+    {{input value=author placeholder="Username"}}
     {{textarea value=content placeholder="Question" rows="10" cols="140"}}
-    {{input value=author placeholder="User"}}
+    {{textarea value=notes placeholder="Additional Notes"}}
   </p>
   <p>
     <button {{action "createQuestion"}}>Ask!</button>
