add ability to answer a question

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -10,4 +10,8 @@
   </p>
 
   {{edit-question question=model editQuestion="editQuestion"}}
+
+  <hr>
+
+  {{new-answer question=model newAnswer="newAnswer"}}
 </article>
