add favorite service and favorite-star component

--- a/app/components/question-tile/template.hbs
+++ b/app/components/question-tile/template.hbs
@@ -1,7 +1,9 @@
 <article>
-  <br>
-  <h2>{{question.content}}</h2>
+  {{#favorite-star}}{{/favorite-star}}
+  <h2>{{#link-to 'question' question.id}}{{question.content}}{{/link-to}}</h2>
   <p>
     {{question.author}}
   </p>
+
 </article>
+<button {{action 'addToFavorites' question}}>Add to Favorites</button>
