add ability to add to favorites service and display at top of index page

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,6 @@
 <article>
+  <button {{action 'addToFavorites' model}}>Add to Favorites</button>
+
   <br>
   <h1>Q:</h1>
     <h2>{{model.content}}</h2>
