refactor number of answers computed property

--- a/app/components/question-tile/template.hbs
+++ b/app/components/question-tile/template.hbs
@@ -1,7 +1,7 @@
 <article>
   <h2>{{#link-to 'question' question.id}}{{question.content}}{{/link-to}}</h2>
   <p>
-    {{question.author}}
+    {{question.author}} on {{model.date}}
   </p>
   <p>
     Current number of answers: {{totalAnswers}}
