--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,8 @@
     <div class="navbar-header">
 
       <div class="nav navbar-nav navbar-right">
-        <a class="navbar-brand" href="/">ASK?</a>
+        <span class="navbar-brand">{{#link-to 'index'}}ASK?{{/link-to}}</span>
+
 
         {{#bs-dropdown}}
         {{#bs-dropdown-button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"}}
